--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: node_js # Node.js based project
+language: node_js
 node_js:
   - 14
 cache:
@@ -6,7 +6,7 @@ cache:
   - node_modules
 script:
   - npm run build
-  - npm run export 
+  - npm run export
   - touch out/.nojekyll
 deploy:
   provider: pages
