--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -15,7 +16,8 @@
   },
   "devDependencies": {
     "@types/react": "17.0.30",
-    "eslint": "8.0.1",
+    "babel-plugin-transform-define": "^2.0.1",
+    "eslint": "^8.1.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
   }
