--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "eslint": "eslint .",
     "export": "next export"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "next": "^9.5.4",
+    "next-compose-plugins": "^2.2.0",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
+    "@types/node": "^16.11.4",
     "@types/react": "17.0.30",
     "babel-plugin-transform-define": "^2.0.1",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "11.1.2",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.5",
     "typescript": "4.4.4"
   }
 }
