--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^9.5.4",
+    "next": "11.1.2",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
