--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
+    "next": "^11.1.2",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.6.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
