--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.6.2",
     "react": "^17.0.2",
+    "react-chrono": "^1.13.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
