--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.1.5",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -22,9 +24,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.8",
+    "@babel/eslint-parser": "^7.17.0",
     "@types/node": "^16.11.4",
     "@types/react": "17.0.30",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-define": "^2.0.1",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
